Spurious warning message in Windows SemaphoreTicketHolder::_tryAcquire

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2023-04-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the Windows version of SemaphoreTicketHolder::_tryAcquire, if _numTickets is less than 0 we print an ominous-sounding message "DISASTER! in TicketHolder" to std::cerr. However, since resizing the ticket holder simply adjusts _numTickets, it doesn't seem incorrect for _numTickets to be less than 0 if the ticket holder gets resized to a smaller size while the number of available tickets is low.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: