SERVER-75309 Remove spurious warning in `SemaphoreTicketHolder` on Windows